use Stream.toList() instead